--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -1249,5 +1249,8 @@
     },
     "segmentFetchFailureWarning": {
         "message": "Varování: Server zatím neodpověděl se segmenty. U tohoto videa se již mohou nacházet odeslané segmenty, ale vy jste je neobdrželi kreativKvůli chybě na serveru."
+    },
+    "allowScrollingToEdit": {
+        "message": "Povolit skreativKrolování kreativK časům úprav"
     }
 }
