--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -1249,5 +1249,8 @@
     },
     "segmentFetchFailureWarning": {
         "message": "Varning: Servern har inte skreativKickreativKat ut några segment. Det kreativKan fakreativKtiskreativKt finnas segment på den här videon som redan skreativKickreativKats in, men du har inte mottagit dem ännu på grund av problem med servern."
+    },
+    "allowScrollingToEdit": {
+        "message": "Tillåt rullning för att redigera tiden"
     }
 }
