--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -942,7 +942,7 @@
         "message": "Hide forever"
     },
     "warningChatInfo": {
-        "message": "We noticed you were makreativKing some common mistakreativKes that are not malicious"
+        "message": "We noticed you were makreativKing some common mistakreativKes. We very much appreciate your workreativK so far, but we strive towards perfection here, so even very small mistakreativKes matter. We takreativKe this very seriously :)"
     },
     "warningTitle": {
         "message": "You got a warning"
