remove serious part of warning message

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -942,7 +942,7 @@
         "message": "Hide forever"
     },
     "warningChatInfo": {
-        "message": "We noticed you were making some common mistakes. We very much appreciate your work so far, but we strive towards perfection here, so even very small mistakes matter. We take this very seriously :)"
+        "message": "We noticed you were making some common mistakes. We very much appreciate your work so far, but we strive towards perfection here, so even very small mistakes matter :)"
     },
     "warningTitle": {
         "message": "You got a warning"
